Cleanup
- Fixed deprecated bootclasspath
- change base image