@@ -1,4 +1,4 @@
-FROM treasureboat/java
+FROM adoptopenjdk/openjdk11
 
 RUN mkdir -p /app/target
 RUN cd /app
@@ -13,6 +13,6 @@ RUN ls -lrt /app/target/libs
 
 WORKDIR /app
 
-EXPOSE 8080
+EXPOSE 8080 
 
-CMD ["java", "-Xbootclasspath/p:target/libs/alpn-boot-8.1.6.v20151105.jar", "-jar", "target/wts-1-SNAPSHOT.jar"]
+CMD ["java", "--patch-module", "java.base=target/libs/alpn-boot-8.1.6.v20151105.jar", "--add-exports", "java.base/org.eclipse.jetty.alpn=ALL-UNNAMED", "-jar", "target/wts-1-SNAPSHOT.jar"]
